[fix-24] - Storage, Balance and Price entities and their use cases - Data loading draft - major refactoring