@@ -1,12 +1,6 @@
 package md.ramaiana.foodmarket.domain.product.core.usecase;
 
 import jakarta.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import md.ramaiana.foodmarket.domain.product.core.response.ProductGroupResponse;
@@ -19,6 +13,8 @@ import md.ramaiana.foodmarket.domain.product.data.ProductRepository;
 import md.ramaiana.foodmarket.shared.annotation.UseCase;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.*;
+
 /**
  * Use case for searching products.
  */
@@ -26,63 +22,63 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class ProductSearchUseCase {
 
-  private final ProductRepository productRepository;
-  private final ProductGroupRepository productGroupRepository;
+    private final ProductRepository productRepository;
+    private final ProductGroupRepository productGroupRepository;
 
-  /**
-   * Execute the use case.
-   */
-  @NonNull
-  @Transactional(readOnly = true)
-  public ProductListResponse execute(@Nullable Integer groupId, @Nullable Integer brandId, @Nullable String nameLike) {
-    List<ProductEntity> products = productRepository.findAllByFilters(groupId, brandId, nameLike);
-    List<ProductGroupEntity> groups = findProductsForProductsList(products);
+    /**
+     * Execute the use case.
+     */
+    @NonNull
+    @Transactional(readOnly = true)
+    public ProductListResponse execute(@Nullable Integer groupId, @Nullable Integer brandId, @Nullable String nameLike) {
+        List<ProductEntity> products = productRepository.findAllByFilters(groupId, brandId, nameLike);
+        List<ProductGroupEntity> groups = findProductsForProductsList(products);
 
-    List<ProductResponse> productResponses = products.stream()
-        .map(ProductResponse::new)
-        .collect(Collectors.toList());
+        List<ProductResponse> productResponses = products.stream()
+                .map(ProductResponse::new)
+                .toList();
 
-    List<ProductGroupResponse> groupResponses = groups.stream()
-        .map(ProductGroupResponse::new)
-        .collect(Collectors.toList());
+        List<ProductGroupResponse> groupResponses = groups.stream()
+                .map(ProductGroupResponse::new)
+                .toList();
 
-    return new ProductListResponse(productResponses, groupResponses);
-  }
-
-  @NonNull
-  private List<ProductGroupEntity> findProductsForProductsList(@NonNull List<ProductEntity> products) {
-    Map<Integer, ProductGroupEntity> groupsMap = new HashMap<>();
-    List<ProductGroupEntity> topGroups = new ArrayList<>();
-
-    for (ProductEntity product : products) {
-      Integer productGroupId = product.getGroupId();
-      if (productGroupId != null) {
-        addAllParentsToMap(productGroupId, groupsMap);
-      }
+        return new ProductListResponse(productResponses, groupResponses);
     }
 
-    for (ProductGroupEntity group : groupsMap.values()) {
-      if (!group.hasParent()) {
-        topGroups.add(group);
-      } else {
-        ProductGroupEntity parent = groupsMap.get(group.getParentGroupId());
-        if (parent != null) {
-          parent.addChildIfAbsent(group);
+    @NonNull
+    private List<ProductGroupEntity> findProductsForProductsList(@NonNull List<ProductEntity> products) {
+        Map<Integer, ProductGroupEntity> groupsMap = new HashMap<>();
+        List<ProductGroupEntity> topGroups = new ArrayList<>();
+
+        for (ProductEntity product : products) {
+            Integer productGroupId = product.getGroupId();
+            if (productGroupId != null) {
+                addAllParentsToMap(productGroupId, groupsMap);
+            }
         }
-      }
+
+        for (ProductGroupEntity group : groupsMap.values()) {
+            if (!group.hasParent()) {
+                topGroups.add(group);
+            } else {
+                ProductGroupEntity parent = groupsMap.get(group.getParentGroupId());
+                if (parent != null) {
+                    parent.addChildIfAbsent(group);
+                }
+            }
+        }
+
+        return topGroups;
     }
 
-    return topGroups;
-  }
-
-  private void addAllParentsToMap(@NonNull Integer childGroupId, @NonNull Map<Integer, ProductGroupEntity> parents) {
-    Optional<ProductGroupEntity> optionalGroup = productGroupRepository.findById(childGroupId);
-    if (optionalGroup.isPresent()) {
-      ProductGroupEntity group = optionalGroup.get();
-      parents.putIfAbsent(group.getId(), group);
-      if (group.hasParent()) {
-        addAllParentsToMap(group.getParentGroupId(), parents);
-      }
+    private void addAllParentsToMap(@NonNull Integer childGroupId, @NonNull Map<Integer, ProductGroupEntity> parents) {
+        Optional<ProductGroupEntity> optionalGroup = productGroupRepository.findById(childGroupId);
+        if (optionalGroup.isPresent()) {
+            ProductGroupEntity group = optionalGroup.get();
+            parents.putIfAbsent(group.getId(), group);
+            if (group.hasParent()) {
+                addAllParentsToMap(group.getParentGroupId(), parents);
+            }
+        }
     }
-  }
 }
